# configuration-resolver

./: .gitignore  README.md  pyproject.toml  requirements.txt
config_resolver/: __init__.py  azure_keyvault_reader.py  filesys_configuration.py  resolver.py
config_resolver/overriders/: abstract_overrider.py  utils_dict.py
config_resolver/overriders/azure_keyvault/: azure_keyvault_overrider.py
config_resolver/overriders/databricks_keyvault/: databricks_keyvault_overrider.py
config_resolver/overriders/environment/: environment_overrider.py
config_resolver/resolvers/: abstract_resolver.py  utils_dict.py
config_resolver/resolvers/azure_keyvault/: azure_keyvault_reader.py  azure_keyvault_resolver.py
config_resolver/resolvers/dictionary/: dictionary_resolver.py
config_resolver/resolvers/environment/: environment_resolver.py
configuration_resolver/: __init__.py  filesys_configuration.py  resolver.py
configuration_resolver/overriders/: utils_dict.py
configuration_resolver/overriders/dummy/: dummy_overrider.py
configuration_resolver/overriders/environment/: environment_overrider.py
tests/: test_config_json.py  test_merge_dict.py
tests/resources/: config_01.json  config_02.json
