[build-system]
requires = [
"azure.identity",
"azure-keyvault-secrets",
"attrs==20.2.0",
"azure-common==1.1.25",
"azure-core==1.8.2",
"azure-identity==1.4.1",
"azure-keyvault-secrets==4.2.0",
"certifi==2020.6.20",
"cffi==1.14.3",
"chardet==3.0.4",
"cryptography==3.2.1",
"docutils==0.16",
"flit==3.0.0",
"flit-core==3.0.0",
"idna==2.10",
"importlib-metadata==2.0.0",
"iniconfig==1.1.1",
"isodate==0.6.0",
"msal==1.6.0",
"msal-extensions==0.2.2",
"msrest==0.6.19",
"oauthlib==3.1.0",
"packaging==20.4",
"pluggy==0.13.1",
"portalocker==1.7.1",
"py==1.9.0",
"pycparser==2.20",
"PyJWT==1.7.1",
"pyparsing==2.4.7",
"pytest==6.1.2",
"pytoml==0.1.21",
"requests==2.24.0",
"requests-oauthlib==1.3.0",
"six==1.15.0",
"toml==0.10.2",
"urllib3==1.25.11",
"zipp==3.4.0",
]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
home-page = "https://github.com/jtviegas/config-resolver"
module = "config_resolver"
dist-name = "config-resolver"
author = "jtviegas"
author-email = "jtviegas.js@gmail.com"
requires-python = ">=3.7"
classifiers = [
    "License :: OSI Approved :: Unlicense",
    "Programming Language :: Python :: 3.7",
]
