[build-system]
requires = [ "flit-core==3.0.0", ]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
home-page = "https://github.com/jtviegas/config-resolver"
module = "configuration_resolver"
dist-name = "configuration-resolver"
author = "jtviegas"
author-email = "jtviegas.js@gmail.com"
requires-python = ">=3.7"
requires = [
    "configuration-overrider",
]
classifiers = [ "Programming Language :: Python :: 3.7", ]
[tool.flit.metadata.requires-extra]
test = [ "pytest >=6.1.2", ]
